Ingress Controller/ingress-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 8080
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8084
          - path: /foodCatalogue
            pathType: Prefix
            backend:
              service:
                name: foodcatalogue-service
                port:
                  number: 8082
